@startuml

title __DC-CA1's Class Diagram__\n

  namespace clientserver.client {
    class clientserver.client.Client {
    }
  }
  

  namespace clientserver.client {
    class clientserver.client.ClientStreamSocket {
    }
  }
  

  namespace clientserver.client {
    class clientserver.client.EchoClientHelper {
    }
  }
  

  namespace clientserver.server {
    class clientserver.server.EchoServerThread {
    }
  }
  

  namespace clientserver.server {
    class clientserver.server.Server {
    }
  }
  

  namespace clientserver.server {
    class clientserver.server.ServerStreamSocket {
    }
  }
  

  clientserver.client.ClientStreamSocket -up-|> java.net.Socket
  clientserver.client.EchoClientHelper o-- clientserver.client.ClientStreamSocket : mySocket
  clientserver.server.EchoServerThread .up.|> java.lang.Runnable
  clientserver.server.EchoServerThread o-- clientserver.server.ServerStreamSocket : myDataSocket
  clientserver.server.ServerStreamSocket -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
